Fix issue with scrollbars

--- a/html/style.css
+++ b/html/style.css
@@ -48,8 +48,17 @@
 .characters {
     width: 100%;
     height: 72.5%;
-    overflow: scroll !important;
+    overflow-y: scroll;
+    overflow-x: hidden;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
+
+.characters::-webkit-scrollbar {
+    display: none;
+  }
+  
 
 .character {
     position: relative;
